--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
-
+body{
+    background-color: rgb(104, 104, 109);
+}
+#container {
+    font-family: Arial,sans-serif;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: rgb(87, 202, 255);
+}
+button{
+    font-size: 1.5rem;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: none;
+    background-color: hsl(160, 85%, 32%);
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+}
+button:hover {
+    background-color: rgb(0, 255, 55);
+}
+button:active{
+    background-color: rgb(0, 200, 0);
+}
