--- a/style.css
+++ b/style.css
@@ -24,3 +24,25 @@ button:hover {
 button:active{
     background-color: rgb(0, 200, 0);
 }
+input{
+    font-size: 2rem;
+    width: 150px;
+    text-align: center;
+    font-weight: bold;
+}
+#diceResult {
+    margin: 25px;
+    font-size: 1.5rem;
+}
+#diceImages {
+    width: 100px;
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+.dice-image {
+    width: 100px;
+    height: 100px;
+}
